# cardinal

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yaml.yml  ci.yml  czip.yml  release.yml
src/crates/base/: Cargo.toml  README.md
src/crates/base/src/: context.rs  destinations.rs  lib.rs  provider.rs  router.rs
src/crates/base/src/destinations/: container.rs  matcher.rs
src/crates/benches/: Cargo.toml
src/crates/benches/benches/: baseline.rs  dsl.rs  plugins.rs
src/crates/benches/src/: lib.rs
src/crates/cardinal/: Cargo.toml  README.md
src/crates/cardinal/src/: lib.rs
src/crates/cardinal/src/tests/: http.rs  mod.rs
src/crates/cardinal/src/tests/configs/: cardinal_default.toml  context_provider.toml  context_provider_missing.toml  destination_short_circuit.toml  global_request_middleware.toml  global_request_middleware_test.toml  global_response_middleware.toml  plugin_executor_denies.toml  request_response_headers.toml  restricted_route_middleware.toml  restricted_route_middleware_negative.toml  wasm_host_import.toml  wasm_host_import_env.toml  wasm_inbound_header_set.toml  wasm_inbound_header_skip.toml  wasm_outbound_header_set.toml  wasm_outbound_header_skip.toml  wasm_request_header_set.toml  wasm_request_response_headers.toml  wasm_request_shared_state.toml  wasm_request_shared_state_missing.toml  wasm_request_status_short_circuit.toml  wasm_response_plugin.toml
src/crates/cli/: Cargo.toml  README.md
src/crates/cli/src/: lib.rs  main.rs
src/crates/cli/src/cmd/: run.rs
src/crates/config/: Cargo.toml  README.md
src/crates/config/src/: config.rs  lib.rs
src/crates/czip/: Cargo.toml
src/crates/czip/src/: generate.rs  lib.rs
src/crates/czip/src/utils/: bytes.rs
src/crates/czip/src/versions/: v1.rs
src/crates/errors/: Cargo.toml  README.md
src/crates/errors/src/: internal.rs  lib.rs  proxy.rs
src/crates/filters/: Cargo.toml
src/crates/filters/src/: builtin.rs  container.rs  lib.rs
src/crates/filters/src/builtin/: restricted_route_filter.rs  restricted_route_middleware.rs
src/crates/filters/src/filters/: mod.rs
src/crates/filters/src/utils/: mod.rs
src/crates/plugins/: Cargo.toml  README.md
src/crates/plugins/src/: builtin.rs  container.rs  headers.rs  lib.rs  plugin_executor.rs  request_context.rs
src/crates/plugins/src/builtin/: restricted_route_middleware.rs
src/crates/plugins/src/filters/: mod.rs
src/crates/plugins/src/runner/: mod.rs
src/crates/plugins/src/utils/: mod.rs
src/crates/proxy/: Cargo.toml  README.md
src/crates/proxy/src/: context_provider.rs  lib.rs  req.rs  retry.rs
src/crates/proxy/src/filters/: mod.rs  restricted_route_filter.rs
src/crates/proxy/src/utils/: requests.rs
src/crates/wasm-filters/: Cargo.toml
src/crates/wasm-filters/src/: lib.rs  runner.rs
src/crates/wasm-filters/src/host/: get_query_param.rs  set_header.rs
src/crates/wasm-plugins/: Cargo.toml  README.md
src/crates/wasm-plugins/src/: context.rs  instance.rs  lib.rs  plugin.rs  runner.rs  utils.rs
src/crates/wasm-plugins/src/host/: abort.rs  get_header.rs  get_query_param.rs  get_req_var.rs  mod.rs  set_header.rs  set_req_var.rs  set_status.rs
tests/wasm-plugins/: compile.sh  plugin.wasm  test1.ts
tests/wasm-plugins/allow/: expected_response.json  incoming_request.json  plugin.ts  plugin.wasm
tests/wasm-plugins/block/: expected_response.json  incoming_request.json  plugin.ts  plugin.wasm
tests/wasm-plugins/host-signal/: expected_response.json  plugin.ts  plugin.wasm
tests/wasm-plugins/inbound-allow/: expected_response.json  incoming_request.json  plugin.wasm
tests/wasm-plugins/inbound-block/: expected_response.json  incoming_request.json  plugin.ts
tests/wasm-plugins/inbound-tag/: plugin.ts  plugin.wasm
tests/wasm-plugins/outbound-tag/: plugin.ts  plugin.wasm
tests/wasm-plugins/request-response/: plugin.ts  plugin.wasm
tests/wasm-plugins/request-shared-state/: getter.ts  getter.wasm  setter.ts  setter.wasm
tests/wasm-plugins/require-tenant/: expected_response.json  incoming_request.json  plugin.ts  plugin.wasm
