[workspace]
members = [
    "src/crates/*"
]
resolver = "2"

[workspace.package]
version = "0.2.22"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/andrespirela/cardinal"
homepage = "https://github.com/andrespirela/cardinal"
authors = ["Andres Pirela <andres@example.com>"]

[workspace.dependencies]
async-trait = "0.1"
tracing = "0.1.41"
thiserror = "2.0.12"
serde = "1.0.219"
parking_lot = "0.12.3"
tokio = { version = "1.44.2", features = ["full"] }
pingora = { version = "0.6.0", features = ["proxy", "openssl"] }
http = "1.3.1"
config = "0.15.11"
tracing-subscriber = "0.3"
matchit = "0.8.6"
derive_builder = "0.20.2"
url = "2.5.7"

#[patch.crates-io]
#sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
