[package]
name = "cardinal-base"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core functionality for the Cardinal project"
keywords = ["cardinal", "base", "core"]
categories = ["development-tools"]

[dependencies]
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
cardinal-config = { path = "../config" }
cardinal-errors = { path = "../errors" }
matchit.workspace = true
parking_lot.workspace = true
pingora.workspace = true
http.workspace = true