[package]
name = "cardinal-base"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Dependency injection and routing primitives for the Cardinal gateway"
keywords = ["gateway", "dependency-injection", "routing"]
categories = ["development-tools", "network-programming"]

[dependencies]
tokio.workspace = true
async-trait.workspace = true
cardinal-config = { path = "../config", version = "0.2.33" }
cardinal-errors = { path = "../errors", version = "0.2.33" }
matchit.workspace = true
parking_lot.workspace = true
pingora.workspace = true
http.workspace = true
regex = "1.11.1"
