[package]
name = "cardinal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI interface for the Cardinal project"
keywords = ["cardinal", "cli", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
cardinal-base = { path = "../base" }
cardinal-config = { path = "../config" }
cardinal-errors = { path = "../errors" }
cardinal-proxy = { path = "../proxy" }
tracing.workspace = true
parking_lot.workspace = true
pingora.workspace = true