[package]
name = "cardinal-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Runtime orchestrator for the Cardinal reverse proxy"
keywords = ["gateway", "reverse-proxy", "pingora"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
cardinal-base = { path = "../base", version = "0.2.25" }
cardinal-config = { path = "../config", version = "0.2.25" }
cardinal-errors = { path = "../errors", version = "0.2.25" }
cardinal-proxy = { path = "../proxy", version = "0.2.25" }
cardinal-plugins = { path = "../plugins", version = "0.2.25" }
tracing.workspace = true
pingora.workspace = true
tokio.workspace = true

[dev-dependencies]
tiny_http = "0.12.0"
ureq = "3.1.2"
cardinal-wasm-plugins = { path = "../wasm-plugins", version = "0.2.25" }
async-trait.workspace = true
