[package]
name = "cardinal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI interface for the Cardinal project"
keywords = ["cardinal", "cli", "command-line"]
categories = ["command-line-utilities"]

[[bin]]
name = "cardinal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
cardinal = { path = "../cardinal" }
cardinal-errors = { path = "../errors" }
tracing-subscriber = { workspace = true, features = ["env-filter"]}