[package]
name = "cardinal-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Configuration management for the Cardinal project"
keywords = ["cardinal", "config", "configuration"]
categories = ["development-tools"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20.2"
config.workspace = true
walkdir = "2.5.0"