[package]
name = "cardinal-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Error types and helpers for the Cardinal project"
keywords = ["cardinal", "errors", "error-handling"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
config.workspace = true

