[package]
name = "cardinal-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared error types for the Cardinal gateway stack"
keywords = ["error-handling", "gateway", "pingora"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
config.workspace = true
