[package]
name = "cardinal-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Error types and helpers for the Cardinal project"
keywords = ["cardinal", "errors", "error-handling"]
categories = ["development-tools"]

[dependencies]
pingora = { workspace = true, features = ["openssl"] }
cardinal-base = { path = "../base" }
cardinal-errors = { path = "../errors" }
cardinal-wasm-plugins = { path = "../wasm-plugins" }
cardinal-config = { path = "../config" }
async-trait.workspace = true
tracing.workspace = true
url.workspace = true
form_urlencoded = "1.2.2"