[package]
name = "cardinal-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Middleware registry and execution engine for the Cardinal gateway"
keywords = ["middleware", "gateway", "wasm", "reverse-proxy"]
categories = ["network-programming", "development-tools"]

[dependencies]
parking_lot.workspace = true
pingora = { workspace = true, features = ["openssl"] }
cardinal-base = { path = "../base", version = "0.2.39" }
cardinal-errors = { path = "../errors", version = "0.2.39" }
cardinal-wasm-plugins = { path = "../wasm-plugins", version = "0.2.39" }
cardinal-config = { path = "../config", version = "0.2.39" }
async-trait.workspace = true
tracing.workspace = true
form_urlencoded = "1.2.2"
http.workspace = true
chrono.workspace = true