[package]
name = "cardinal-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Pingora-based HTTP proxy implementation for the Cardinal gateway"
keywords = ["reverse-proxy", "gateway", "pingora", "http"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
pingora = { workspace = true, features = ["openssl"] }
cardinal-base = { path = "../base" }
tracing.workspace = true
http.workspace = true
cardinal-errors = { path = "../errors" }
cardinal-plugins = { path = "../plugins" }
async-trait.workspace = true
