[package]
name = "cardinal-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Pingora-based HTTP proxy implementation for the Cardinal gateway"
keywords = ["reverse-proxy", "gateway", "pingora", "http"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
pingora = { workspace = true, features = ["openssl"] }
cardinal-base = { path = "../base", version = "0.2.29" }
tracing.workspace = true
http.workspace = true
cardinal-errors = { path = "../errors", version = "0.2.29" }
cardinal-plugins = { path = "../plugins", version = "0.2.29" }
cardinal-wasm-plugins = { path = "../wasm-plugins", version = "0.2.29" }
async-trait.workspace = true
bytes = "1.10.1"
serde_json = "1.0.145"
parking_lot.workspace = true