[package]
name = "cardinal-wasm-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Error types and helpers for the Cardinal project"
keywords = ["cardinal", "errors", "error-handling"]
categories = ["development-tools"]

[dependencies]
wasmer = "6.0.1"
cardinal-errors = { path = "../errors" }
derive_builder.workspace = true
serde = { workspace = true, features = ["derive"] }
bytes = "1.10.1"
serde_json = "1.0"
enum-as-inner = "0.6.1"
tracing.workspace = true